# nestbox

./: README.md  object_description.txt
.github/workflows/: rust.yml
database_bouncycastle/: Cargo.toml
database_bouncycastle/.github/workflows/: rust.yml
database_bouncycastle/src/: bouncycastle.rs  extract_argv.rs  main.rs
database_bouncycastle/src/bouncycastle/: collector.rs
nestboxd/: Cargo.toml  nestboxd_conf.yaml
nestboxd/db/: postgres.sql
nestboxd/src/: extract_argv.rs  main.rs
nestboxd/src/controller/: bird.rs  breed.rs  error_message.rs  mod.rs  nestbox.rs  req_structs.rs  res_structs.rs  user.rs  utilities.rs  validator.rs
nestboxd/src/service/: bird.rs  breed.rs  geolocation.rs  image.rs  mod.rs  nestbox.rs  res_structs.rs  service_helper.rs  session.rs  user.rs
nestboxd/test_db_dump/nestbox_testing/: birds.bson  birds.metadata.json  breeds.metadata.json  geolocations.metadata.json  mandants.bson  mandants.metadata.json  nestboxes.bson  nestboxes.metadata.json  sessions.bson  sessions.metadata.json  users.bson  users.metadata.json
