[package]
name = "database_bouncycastle"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
mongodb = "1.0.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
chrono = "0.4"
