[package]
name = "database_bouncycastle"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
mongodb = {version = "1.1.1", default-features = false, features = ["sync"]}
chrono = "0.4"
