[package]
name = "nestboxd"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2021"

[dependencies]
getopts = "0.2"
yaml-rust = "0.4"
actix-web = "3"
actix-rt = "*"
mongodb = "1"
bson = "1"
serde = "1"
futures = "0.3"
sha3 = "0.9"
hex = "0.4"
lazy_static = "1"
regex = "1"
uuid = "0.8"
rand = "0.8"
env_logger = "0.8"
chrono = "0.4"