[package]
name = "nestboxd"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2021"

[dependencies]
actix-multipart = "0.3"
actix-rt = "*"
actix-web = "3"
chrono = "0.4"
data-encoding = "2"
env_logger = "0.8"
futures = "0.3"
getopts = "0.2"
hex = "0.4"
hex-literal = "0.3"
image = "0.23"
infer = "0.5"
lazy_static = "1"
rand = "0.8"
regex = "1"
serde = "1"
sha3 = "0.9"
uuid = "0.8"
yaml-rust = "0.4"

[dependencies.mongodb]
version = "2"
default-features = false
features = ["async-std-runtime"]